--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-build
 dist
 build/*
 .eggs
@@ -15,7 +14,6 @@ highctidh.egg-info/
 *.swp
 src/dist/*
 src/deb_dist/*
-src/build/*
 src/libhighctidh/*
 test1024
 test2048
@@ -24,3 +22,26 @@ test512
 testrandom
 docker_build_output/
 src/example-ctidh*
+m4/*
+.dirstamp
+.libs
+*.lo
+*.la
+*.pc
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+install-sh
+libtool
+ltmain.sh
+missing
+stamp-h1
