--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -3,7 +3,6 @@ name: MacOS Golang build and test
 on: [push]
 
 env:
-  CGO_LDFLAGS: -Wl,-stack_size,0x1F40000
   CC: clang
 
 jobs:
@@ -18,6 +17,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Install tools
+        run: brew install make autoconf automake libtool pkg-config
+
+      - name: Build and install C library
+        shell: bash
+        run: |
+          autoreconf -fi
+          ./configure --prefix="${HOME}/inst" --disable-silent-rules --disable-shared --enable-static
+          make install
+          echo PKG_CONFIG_PATH="${HOME}/inst/lib/pkgconfig" >> $GITHUB_ENV
+
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
@@ -30,24 +44,17 @@ jobs:
       - name: Install golang dependencies
         shell: bash
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           go get -v ./src/ctidh511
 
       - name: Build golang
         shell: bash
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           go build -v ./...
 
       - name: Golang test
         shell: bash
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
           go test -v ./src/ctidh2048;
-
