--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ keywords = post-quantum cryptography, cryptography, ctidh, csidh, C, highctidh
 license = Public Domain
 
 [options]
-python_requires = >=3.9
+python_requires = >=3.8
+packages = highctidh
 
 [build]
 build_base = build
