--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,4 +1,7 @@
-include *.h
-include *.S
-include *.c
 include VERSION
+include debian/changelog
+include debian/control
+include debian/compat
+include debian/watch
+include debian/source/format
+include debian/rules
