--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -2,14 +2,15 @@
 name = highctidh
 version = file: VERSION
 author = Jacob Appelbaum
-description = highctidh bindings with included C library
-long_description = Python highctidh ctype bindings with included C library
+description = highctidh bindings for shared libraries
+long_description = Python highctidh ctype bindings for installed shared libraries
 url = https://codeberg.org/vula/highctidh
 keywords = post-quantum cryptography, cryptography, ctidh, csidh, C, highctidh
 license = Public Domain
 
 [options]
 python_requires = >=3.9
+packages = highctidh
 
 [build]
 build_base = build
