--- a/.github/workflows/docker-alpine-32bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-32bit-multi-arch.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang"]
-        PORTABLE: ["1"]
+        ASM: ["no"]
         CONTAINER: ["alpine"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm/v6 arm32v6/alpine",
                            "--platform linux/arm/v7 arm32v7/alpine",
@@ -38,10 +38,8 @@ jobs:
           -v $(pwd):/${{ github.workspace }} \
           -w ${{ github.workspace }} \
           -e "CC=${{ matrix.CC }}" \
-          -e "HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }}" \
           -e "CFLAGS=-fno-lto -fforce-enable-int128" \
-          -e "PLATFORM_SIZE=32" \
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make alpine-multi-arch"
+          -c "./misc/docker-gha-fixup.sh && ./configure --enable-asm=${{ matrix.ASM }} && make alpine-multi-arch"
