--- a/.github/workflows/docker-alpine.yaml
+++ b/.github/workflows/docker-alpine.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        PORTABLE: ["0", "1"]
+        ASM: ["yes", "no"]
         CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
                     "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
       fail-fast: false
@@ -23,15 +23,16 @@ jobs:
       run: ./misc/install-alpine-deps.sh
 
     - name: Build
-      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
+      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix="$HOME/inst" --enable-asm=${{ matrix.ASM }} && make
+
     - name: Test install
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
+      run: make install
 
     - name: Build examples
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
+      run: make examples
 
     - name: Run examples
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
+      run: make examples-run
 
     - name: Examine build artifacts
-      run: ls -alh dist/*.so && sha256sum dist/*.so
+      run: ls -alh .libs/*.so && sha256sum .libs/*.so
