--- a/.github/workflows/docker-ubuntu-asan.yaml
+++ b/.github/workflows/docker-ubuntu-asan.yaml
@@ -6,7 +6,6 @@ on:
     branches: [ "main" ]
 
 env:
-  CGO_CFLAGS: -fsanitize=address -fpie -fPIC -fPIE -fno-omit-frame-pointer -g3 -fno-lto
   CC: clang
 
 jobs:
@@ -14,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        PORTABLE: ["0", "1"]
+        ASM: ["yes", "no"]
         CONTAINER: ["ubuntu:23.10", "ubuntu:24.04"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
@@ -24,8 +23,13 @@ jobs:
     - name: Install Ubuntu miminal golang deps
       run: ./misc/install-debian-deps-go-sanitizer.sh
 
+    - name: Build and install C library with asan
+      env:
+        CFLAGS: -fsanitize=address -fno-omit-frame-pointer -g3 -fno-lto
+      run: CC=${{ matrix.CC }} ./configure --prefix="$HOME/inst" --enable-asm=${{ matrix.ASM }} && make install
+
     - name: Show go env
       run: go env
 
     - name: Build and test with asan
-      run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -timeout 0 -asan -v ./...
+      run: cd src/ctidh1024 && PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig" go test -timeout 0 -asan -v ./...
