--- a/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
+++ b/.github/workflows/freebsd-fiat-test-non-gnu-make.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: FreeBSD clang build of fiat backend (non-GNU make)
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "clang"
-      MAKE: "make"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in FreeBSD
@@ -19,7 +15,7 @@ jobs:
       uses: vmactions/freebsd-vm@v1
       with:
         release: "14.0"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        envs: 'CC'
         usesh: true
         prepare: |
           uname -a
@@ -29,5 +25,6 @@ jobs:
           echo $SHELL
 
         run: |
-          HIGHCTIDH_PORTABLE=1 make
-          #          HIGHCTIDH_PORTABLE=1 make test-quick
+          ./configure
+          make
+          # make test-quick
