--- a/.github/workflows/freebsd-fiat-test.yaml
+++ b/.github/workflows/freebsd-fiat-test.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: FreeBSD clang build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "clang"
-      MAKE: "gmake"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in FreeBSD
@@ -24,13 +20,11 @@ jobs:
         prepare: |
           uname -a
           freebsd-version
-          pkg install -y gmake
           pkg install -y llvm-13
           pkg install -y bash
           clang -v
-          gmake -v
           echo $SHELL
 
         run: |
-          HIGHCTIDH_PORTABLE=1 gmake
-          HIGHCTIDH_PORTABLE=1 gmake test-quick
+          ./configure
+          make test-quick
