--- a/.github/workflows/macos-golang-test.yaml
+++ b/.github/workflows/macos-golang-test.yaml
@@ -3,7 +3,6 @@ name: MacOS Golang build and test
 on: [push]
 
 env:
-  CGO_LDFLAGS: -Wl,-stack_size,0x1F40000
   CC: clang
 
 jobs:
@@ -18,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Build and install C library
+        shell: bash
+        run: ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
+
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
@@ -29,25 +32,18 @@ jobs:
 
       - name: Install golang dependencies
         shell: bash
-        run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
-          go get -v ./src/ctidh511
+        run: go get -v src/ctidh511
 
       - name: Build golang
         shell: bash
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
+          export PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig"
           go build -v ./...
 
       - name: Golang test
         shell: bash
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
-          go test -v ./src/ctidh511;
-          go test -v ./src/ctidh512;
-          go test -v ./src/ctidh1024;
-          go test -v ./src/ctidh2048;
-
+          go test -v src/ctidh511
+          go test -v src/ctidh512
+          go test -v src/ctidh1024
+          go test -v src/ctidh2048
