--- a/.github/workflows/macos-python-test.yaml
+++ b/.github/workflows/macos-python-test.yaml
@@ -25,20 +25,25 @@ jobs:
        python -V
        bash --version
 
-    - name: Install dependencies
+    - name: Build and install C library
+      shell: bash
+      run: |
+        ./configure --prefix="${HOME}/inst"
+        make install
+
+    - name: Install Python dependencies
       shell: bash
       run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist
 
     - name: Build wheel
       shell: bash
       run: |
-        export HIGHCTIDH_PORTABLE=1
-        export MAKE=make
         cd src && python -m build
         pip install --force-reinstall dist/highctidh-*.whl
 
     - name: Test with pytest
       shell: bash
       run: |
+        export DYLD_LIBRARY_PATH="${HOME}/inst/lib"
         python -c 'from highctidh import bench; bench.simple_bench()'
         py.test -v
