--- a/.github/workflows/netbsd-fiat-test.yaml
+++ b/.github/workflows/netbsd-fiat-test.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: NetBSD gcc build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "gcc"
-      MAKE: "gmake"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in NetBSD
@@ -19,15 +15,14 @@ jobs:
       uses: vmactions/netbsd-vm@v1
       with:
         release: "10.0"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        envs: 'CC'
         usesh: true
         prepare: |
           uname -a
-          /usr/sbin/pkg_add gmake
           /usr/sbin/pkg_add gcc10
           gcc -v
-          gmake -v
+          make -v
 
         run: |
-          HIGHCTIDH_PORTABLE=1 gmake
-          HIGHCTIDH_PORTABLE=1 gmake test-quick
+          ./configure
+          make test-quick
