--- a/.github/workflows/omnios-fiat-test.yaml
+++ b/.github/workflows/omnios-fiat-test.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Omnios gcc build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "gcc"
-      MAKE: "gmake"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in Omnios
@@ -19,16 +15,16 @@ jobs:
       uses: vmactions/omnios-vm@v1
       with:
         release: "r151046"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        envs: 'CC'
         usesh: true
         prepare: |
           uname -a
           psrinfo -vp
           cat /etc/release
           pkg install developer/object-file developer/linker developer/build/gnu-make system/header system/library/math shell/bash developer/gcc12
-          gmake -v
+          make -v
           gcc -v
 
         run: |
-          HIGHCTIDH_PORTABLE=1 gmake
-          HIGHCTIDH_PORTABLE=1 gmake test-quick
+          ./configure
+          make test-quick
