--- a/.github/workflows/openbsd-fiat-test.yaml
+++ b/.github/workflows/openbsd-fiat-test.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: OpenBSD clang build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "clang"
-      MAKE: "gmake"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in OpenBSD
@@ -19,16 +15,15 @@ jobs:
       uses: vmactions/openbsd-vm@v1
       with:
         release: "7.5"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        envs: 'CC'
         usesh: true
         prepare: |
           uname -a
-          pkg_add gmake
           pkg_add bash
-          gmake -v
+          make -v
           clang -v
           echo $SHELL
 
         run: |
-          HIGHCTIDH_PORTABLE=1 gmake
-          HIGHCTIDH_PORTABLE=1 gmake test-quick
+          ./configure
+          make test-quick
