--- a/.github/workflows/solaris-fiat-i86pc-test.yaml
+++ b/.github/workflows/solaris-fiat-i86pc-test.yaml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Solaris i86pc gcc build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
       CC: "gcc"
-      MAKE: "/usr/bin/gmake"
-      HIGHCTIDH_PORTABLE: "1"
     steps:
     - uses: actions/checkout@v4
     - name: Test in Solaris
@@ -19,14 +15,13 @@ jobs:
       uses: vmactions/solaris-vm@v1
       with:
         release: "11.4-gcc"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        envs: 'CC'
         usesh: true
         prepare: |
           uname -a
           isainfo -v
           pkgutil -U
-          pkgutil -y -i gmake
 
         run: |
-          HIGHCTIDH_PORTABLE=1 gmake
-          HIGHCTIDH_PORTABLE=1 gmake test-quick
+          ./configure
+          make test-quick
