--- a/.github/workflows/ubuntu-targets-test.yaml
+++ b/.github/workflows/ubuntu-targets-test.yaml
@@ -21,13 +21,13 @@ jobs:
       run: sudo ./misc/install-ubuntu-latest-cross-deps.sh
 
     - name: Build 
-      run: CC=${{ matrix.CC }} make
+      run: CC=${{ matrix.CC }} ./configure --prefix=/usr/local && make
 
     - name: Install
-      run: CC=${{ matrix.CC }} sudo make install && sudo ldconfig
+      run: sudo make install && sudo ldconfig
 
     - name: Build C library examples
-      run: CC=${{ matrix.CC }} make examples
+      run: make examples
 
     - name: Run C library examples
       run: make examples-run
