--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yaml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yaml
@@ -44,18 +44,22 @@ jobs:
        bash --version
        ${{ matrix.CC }} -v
 
+    - name: Build and install C library
+      shell: msys2 {0}
+      run: |
+        CC=${{ matrix.CC }} ./configure --prefix="$HOME/inst"
+        make install
+
     - name: Build highctidh
       shell: msys2 {0}
       run: |
         export SETUPTOOLS_USE_DISTUTILS=local
         export SOURCE_DATE_EPOCH=`git log -1 --pretty=%ct`
-        export HIGHCTIDH_PORTABLE=1
-        export WINDOWS=1
-        export MAKE=make
-        CC=${{ matrix.CC }} OPT="" pip install -v --break-system-packages -e src/
+        OPT="" pip install -v --break-system-packages -e src/
 
     - name: Test with pytest
       shell: msys2 {0}
       run: |
+        export LD_LIBRARY_PATH="$HOME/inst/lib"
         python -c 'from highctidh import bench; bench.simple_bench()'
         pytest -v
