--- a/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
+++ b/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
@@ -27,9 +27,14 @@ jobs:
             mingw-w64-ucrt-x86_64-gcc
             mingw-w64-x86_64-go
             mingw-w64-ucrt-x86_64-go
+            pkg-config
             make
             git
             gcc
+
+      - name: Build and install C library
+        shell: bash
+        run: ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
@@ -48,8 +53,6 @@ jobs:
       - name: Install golang dependencies
         shell: msys2 {0}
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           go get -v ./src/ctidh511
           go get -v ./src/ctidh512
           go get -v ./src/ctidh1024
@@ -58,17 +61,14 @@ jobs:
       - name: Build golang
         shell: msys2 {0}
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           export GOEXPERIMENT=cgocheck2
           export GODEBUG=cgocheck=1
+          export PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig"
           go build -v ./...
 
       - name: Golang test
         shell: msys2 {0}
         run: |
-          export HIGHCTIDH_PORTABLE=1
-          export CGO_ENABLED=1
           export GOEXPERIMENT=cgocheck2
           export GODEBUG=cgocheck=1
           export CGO_LDFLAGS="-Wl,--no-as-needed -Wl,-allow-multiple-definition"
