--- a/.github/workflows/docker-alma.yaml
+++ b/.github/workflows/docker-alma.yaml
@@ -26,8 +26,9 @@ jobs:
     - name: Build C library
       run: |
         autoreconf -fi
-        CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --enable-asm=${{ matrix.ASM }}
+        ./configure --prefix=/usr/local --enable-shared --enable-asm=${{ matrix.ASM }} CC=${{ matrix.CC }} CFLAGS="-fno-lto"
         make
+
     - name: Test install
       run: make install
 
