--- a/.github/workflows/docker-arch.yaml
+++ b/.github/workflows/docker-arch.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Build
       run: |
         autoreconf -fi
-        CC=${{ matrix.CC }} CFLAGS="-fno-lto" ./configure --prefix=/usr/local --enable-asm=${{ matrix.ASM }} && make
+        ./configure --prefix=/usr/local --enable-shared --enable-asm=${{ matrix.ASM }} CC=${{ matrix.CC }} CFLAGS="-fno-lto" && make
 
     - name: Test install
       run: sudo make install
