--- a/.github/workflows/docker-ubuntu-asan.yaml
+++ b/.github/workflows/docker-ubuntu-asan.yaml
@@ -23,17 +23,18 @@ jobs:
     - name: Install Ubuntu miminal golang deps
       run: |
         ./misc/install-debian-deps-go-sanitizer.sh
-        apt install -y --no-install-recommends autoconf automake libtool
+        apt install -y --no-install-recommends autoconf automake libtool pkg-config
+        echo "PKG_CONFIG_PATH=${HOME}/inst/lib/pkgconfig" >> $GITHUB_ENV
 
     - name: Build and install C library with asan
       env:
         CFLAGS: -fsanitize=address -fno-omit-frame-pointer -g3 -fno-lto
       run: |
         autoreconf -fi
-        CC=${{ matrix.CC }} ./configure --prefix="$HOME/inst" --enable-asm=${{ matrix.ASM }} && make install
+        ./configure --prefix="${HOME}/inst" --disable-shared --enable-static --enable-asm=${{ matrix.ASM }} && make install
 
     - name: Show go env
       run: go env
 
     - name: Build and test with asan
-      run: cd src/ctidh1024 && PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig" go test -timeout 0 -asan -v ./...
+      run: cd src/ctidh1024 && go test -timeout 0 -asan -v ./...
