--- a/.github/workflows/docker-ubuntu.yaml
+++ b/.github/workflows/docker-ubuntu.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
-        PORTABLE: ["0", "1"]
+        ASM: ["yes", "no"]
         CONTAINER: ["ubuntu:22.04", "ubuntu:23.10", "ubuntu:24.04"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
@@ -19,21 +19,26 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Ubuntu deps
-      run: ./misc/install-debian-deps.sh
+      run: |
+        ./misc/install-debian-deps.sh
+        sudo apt install -y --no-install-recommends autoconf automake libtool
 
     - name: Build
-      run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
+      run: |
+        autoreconf -fi
+        ./configure --prefix=/usr/local --enable-shared --enable-asm=${{ matrix.ASM }} CC=${{ matrix.CC }} CFLAGS="-fno-lto" && make
+
     - name: Test install
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
+      run: make install
 
     - name: Register libraries
       run: sudo ldconfig /usr/local/lib
 
     - name: Build examples
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
+      run: make examples
 
     - name: Run examples
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
+      run: make examples-run
 
     - name: Examine build artifacts
       run: ls -alh dist/*.so && sha256sum dist/*.so
