--- a/.github/workflows/macos-python-test.yaml
+++ b/.github/workflows/macos-python-test.yaml
@@ -43,7 +43,7 @@ jobs:
       shell: bash
       run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist
 
-    - name: Build wheel
+    - name: Build wheel TODO
       shell: bash
       run: |
         cd src && python -m build
