--- a/.github/workflows/ubuntu-golang-cross-compile-test.yaml
+++ b/.github/workflows/ubuntu-golang-cross-compile-test.yaml
@@ -18,12 +18,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Prepare
-      run: sudo bash -c "apt install -y --no-install-recommends autoconf automake libtool"
-
-    - name: Build
       run: |
+        sudo apt install -y --no-install-recommends autoconf automake libtool pkg-config
         autoreconf -fi
-        CC=${{ matrix.CC }} ./configure --prefix="$HOME/inst" && make install
 
     - name: Setup Go ${{ matrix.go-version }}
       uses: actions/setup-go@v5
@@ -37,4 +34,4 @@ jobs:
       run: sudo ./misc/install-debian-go-deps-by-arch.sh ${{ matrix.ARCH }}
 
     - name: Build Golang cgo
-      run: PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig" ./misc/test-golang-cross.sh ${{ matrix.ARCH }}
+      run: ./misc/test-golang-cross.sh ${{ matrix.ARCH }}
