--- a/.github/workflows/windows-fiat-c-library-test.yaml
+++ b/.github/workflows/windows-fiat-c-library-test.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Msys2
       uses: msys2/setup-msys2@v2
       with:
-        msystem: ${{ matrix.ENVIRONMENT }}
+        msystem: CLANG64
         install: >-
           make
           autoconf
