--- a/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
+++ b/.github/workflows/windows-msys-64bit-gcc-ucrt-msvcrt-golang-test.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build and install C library
         shell: bash
-        run: autoreconf -fi && ./configure --prefix="$HOME/inst" --disable-shared --enable-static && make install
+        run: autoreconf -fi && ./configure --prefix="${HOME}/inst" --disable-shared --enable-static && make install
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
@@ -66,7 +66,7 @@ jobs:
         run: |
           export GOEXPERIMENT=cgocheck2
           export GODEBUG=cgocheck=1
-          export PKG_CONFIG_PATH="$HOME/inst/lib/pkgconfig"
+          export PKG_CONFIG_PATH="${HOME}/inst/lib/pkgconfig"
           go build -v ./...
 
       - name: Golang test
