--- a/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
+++ b/.github/workflows/windows-msys-64bit-clang-msvcrt-python-pip-test.yaml
@@ -24,7 +24,7 @@ jobs:
           python-pip
           python-build
           python-setuptools
-          python-wheel
+          mingw-w64-python-wheel
           python-pytest
           git
           clang
