--- a/.github/workflows/docker-alma.yaml
+++ b/.github/workflows/docker-alma.yaml
@@ -19,9 +19,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Almalinux deps
-      run: |
-        ./misc/install-alma-deps.sh
-        dnf install -y autoconf automake libtool
+      run: ./misc/install-alma-deps.sh
 
     - name: Build C library
       run: |
@@ -42,4 +40,4 @@ jobs:
       run: make examples-run
 
     - name: Examine build artifacts
-      run: ls -alh dist/*.so && sha256sum dist/*.so
+      run: ls -alh .libs/*.so && sha256sum .libs/*.so
