--- a/.github/workflows/docker-alpine.yaml
+++ b/.github/workflows/docker-alpine.yaml
@@ -20,9 +20,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install alpine deps
-      run: |
-        ./misc/install-alpine-deps.sh
-        apk add --no-cache autoconf automake libtool
+      run: ./misc/install-alpine-deps.sh
 
     - name: Build
       run: |
