--- a/.github/workflows/docker-amazonlinux.yaml
+++ b/.github/workflows/docker-amazonlinux.yaml
@@ -23,9 +23,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Amazon Linux deps
-      run: |
-        ./misc/install-amazonlinux-deps.sh
-        yum install -y autoconf automake libtool
+      run: ./misc/install-amazonlinux-deps.sh
 
     - name: Gather compiler info
       run: gcc -v && clang -v
