--- a/.github/workflows/docker-opensuse-tumbleweed.yaml
+++ b/.github/workflows/docker-opensuse-tumbleweed.yaml
@@ -19,9 +19,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install openSUSE Tumbleweed deps
-      run: |
-        ./misc/install-opensuse-tumbleweed-deps.sh
-        zypper install -y autoconf automake libtool
+      run: ./misc/install-opensuse-tumbleweed-deps.sh
 
     - name: Build
       run: |
