--- a/.github/workflows/ubuntu-webassembly.yaml
+++ b/.github/workflows/ubuntu-webassembly.yaml
@@ -12,12 +12,13 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install cross compiler deps
-      run: |
-        sudo ./misc/install-ubuntu-webassembly-deps.sh
-        sudo apt install -y --no-install-recommends autoconf automake libtool
+      run: sudo ./misc/install-ubuntu-webassembly-deps.sh
 
     - name: Display compiler version
       run: emcc -v
 
     - name: Build
-      run: autoreconf -fi && emconfigure ./configure --disable-shared --enable-static && make wasm
+      run: |
+        autoreconf -fi
+        emconfigure ./configure --disable-shared --enable-static || cat config.log
+        make wasm
